# mixedlang

./: README.md
ex1/: add.s  main.c
ex2/: main.c  main.cpp  mainc_cpp.c  maincpp_c.cpp  text.c  text.cpp  textc.h  textcpp.h  textcpp_c.cpp  textcpp_c.h
ex3/: CMakeLists.txt
ex3/apps/: CMakeLists.txt  demo.F90  demo.c  demo.cpp
ex3/apps/py_scripts/: demo.py
ex3/include/: config.h  config_c.h  exceptions.h  logger.h  logger_c.h  logger_f.h
ex3/modules/demomodule/: add.py
ex3/modules/mixedlang/: logger.py
ex3/src/: CMakeLists.txt
ex3/src/demoapp/: CMakeLists.txt  demoimpl.cpp  demoimpl.h  main.cpp  python_mgr.cpp  python_mgr.h  python_mgr.hpp
ex3/src/mixedlang_lib/: CMakeLists.txt  config.cpp  config_c.cpp  exceptions.cpp  fc_mixedlang.cpp  logger.cpp  logger_c.cpp  mixedlang_mod.f90
ex3/src/pymixedlang_mod/: CMakeLists.txt  module_pymixedlang.cpp  module_pymixedlang.h
